KILIASM/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     code -> INICIO DOSPUNTOS cuerpo FIN
Rule 3     cuerpo -> instruccion
Rule 4     cuerpo -> label
Rule 5     cuerpo -> comment
Rule 6     comment -> COMMENT cuerpo
Rule 7     comment -> COMMENT empty
Rule 8     label -> LABEL DOSPUNTOS cuerpo
Rule 9     label -> empty
Rule 10    instruccion -> instructionDI
Rule 11    instruccion -> instructionI
Rule 12    instruccion -> instructionDT
Rule 13    instruccion -> instructionN
Rule 14    instruccion -> instructionSTL
Rule 15    instructionSTL -> STL PUNTOCOMA cuerpo
Rule 16    instructionSTL -> empty
Rule 17    instructionDI -> instructionDIName REG COMA REG PUNTOCOMA cuerpo
Rule 18    instructionDI -> empty
Rule 19    instructionI -> instructionIName REG COMA IMM PUNTOCOMA cuerpo
Rule 20    instructionI -> empty
Rule 21    REG -> REGESCALAR
Rule 22    REG -> REGVECTORIAL
Rule 23    instructionDT -> instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
Rule 24    instructionDT -> empty
Rule 25    instructionN -> instructionNName LABEL PUNTOCOMA cuerpo
Rule 26    instructionN -> empty
Rule 27    instructionDIName -> STR
Rule 28    instructionDIName -> LDR
Rule 29    instructionDIName -> MOVR
Rule 30    instructionDIName -> CMPR
Rule 31    instructionDIName -> STRV
Rule 32    instructionDIName -> LDRV
Rule 33    instructionIName -> MOVI
Rule 34    instructionIName -> CMPI
Rule 35    instructionDTName -> ADD
Rule 36    instructionDTName -> SUB
Rule 37    instructionDTName -> MUL
Rule 38    instructionDTName -> ADDVV
Rule 39    instructionDTName -> MULVE
Rule 40    instructionDTName -> DIVVE
Rule 41    instructionNName -> JMP
Rule 42    instructionNName -> JEQ
Rule 43    instructionNName -> STL
Rule 44    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 35
ADDVV                : 38
CMPI                 : 34
CMPR                 : 30
COMA                 : 17 19 23 23
COMMENT              : 6 7
DIVVE                : 40
DOSPUNTOS            : 2 8
FIN                  : 2
IMM                  : 19
INICIO               : 2
JEQ                  : 42
JMP                  : 41
LABEL                : 8 25
LDR                  : 28
LDRV                 : 32
MOVI                 : 33
MOVR                 : 29
MUL                  : 37
MULVE                : 39
PUNTOCOMA            : 15 17 19 23 25
REGESCALAR           : 21
REGVECTORIAL         : 22
STL                  : 15 43
STR                  : 27
STRV                 : 31
SUB                  : 36
error                : 

Nonterminals, with rules where they appear

REG                  : 17 17 19 23 23 23
Start                : 0
code                 : 1
comment              : 5
cuerpo               : 2 6 8 15 17 19 23 25
empty                : 7 9 16 18 20 24 26
instruccion          : 3
instructionDI        : 10
instructionDIName    : 17
instructionDT        : 12
instructionDTName    : 23
instructionI         : 11
instructionIName     : 19
instructionN         : 13
instructionNName     : 25
instructionSTL       : 14
label                : 4

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) code -> . INICIO DOSPUNTOS cuerpo FIN

    INICIO          shift and go to state 3

    Start                          shift and go to state 1
    code                           shift and go to state 2

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) code -> INICIO . DOSPUNTOS cuerpo FIN

    DOSPUNTOS       shift and go to state 4


state 4

    (2) code -> INICIO DOSPUNTOS . cuerpo FIN
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
    (25) instructionN -> . instructionNName LABEL PUNTOCOMA cuerpo
    (26) instructionN -> . empty
    (15) instructionSTL -> . STL PUNTOCOMA cuerpo
    (16) instructionSTL -> . empty
    (44) empty -> .
    (27) instructionDIName -> . STR
    (28) instructionDIName -> . LDR
    (29) instructionDIName -> . MOVR
    (30) instructionDIName -> . CMPR
    (31) instructionDIName -> . STRV
    (32) instructionDIName -> . LDRV
    (33) instructionIName -> . MOVI
    (34) instructionIName -> . CMPI
    (35) instructionDTName -> . ADD
    (36) instructionDTName -> . SUB
    (37) instructionDTName -> . MUL
    (38) instructionDTName -> . ADDVV
    (39) instructionDTName -> . MULVE
    (40) instructionDTName -> . DIVVE
    (41) instructionNName -> . JMP
    (42) instructionNName -> . JEQ
    (43) instructionNName -> . STL

    LABEL           shift and go to state 14
    COMMENT         shift and go to state 16
    STL             shift and go to state 21
    FIN             reduce using rule 44 (empty -> .)
    STR             shift and go to state 22
    LDR             shift and go to state 23
    MOVR            shift and go to state 24
    CMPR            shift and go to state 25
    STRV            shift and go to state 26
    LDRV            shift and go to state 27
    MOVI            shift and go to state 28
    CMPI            shift and go to state 29
    ADD             shift and go to state 30
    SUB             shift and go to state 31
    MUL             shift and go to state 32
    ADDVV           shift and go to state 33
    MULVE           shift and go to state 34
    DIVVE           shift and go to state 35
    JMP             shift and go to state 36
    JEQ             shift and go to state 37

    cuerpo                         shift and go to state 5
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    comment                        shift and go to state 8
    instructionDI                  shift and go to state 9
    instructionI                   shift and go to state 10
    instructionDT                  shift and go to state 11
    instructionN                   shift and go to state 12
    instructionSTL                 shift and go to state 13
    empty                          shift and go to state 15
    instructionDIName              shift and go to state 17
    instructionIName               shift and go to state 18
    instructionDTName              shift and go to state 19
    instructionNName               shift and go to state 20

state 5

    (2) code -> INICIO DOSPUNTOS cuerpo . FIN

    FIN             shift and go to state 38


state 6

    (3) cuerpo -> instruccion .

    FIN             reduce using rule 3 (cuerpo -> instruccion .)


state 7

    (4) cuerpo -> label .

    FIN             reduce using rule 4 (cuerpo -> label .)


state 8

    (5) cuerpo -> comment .

    FIN             reduce using rule 5 (cuerpo -> comment .)


state 9

    (10) instruccion -> instructionDI .

    FIN             reduce using rule 10 (instruccion -> instructionDI .)


state 10

    (11) instruccion -> instructionI .

    FIN             reduce using rule 11 (instruccion -> instructionI .)


state 11

    (12) instruccion -> instructionDT .

    FIN             reduce using rule 12 (instruccion -> instructionDT .)


state 12

    (13) instruccion -> instructionN .

    FIN             reduce using rule 13 (instruccion -> instructionN .)


state 13

    (14) instruccion -> instructionSTL .

    FIN             reduce using rule 14 (instruccion -> instructionSTL .)


state 14

    (8) label -> LABEL . DOSPUNTOS cuerpo

    DOSPUNTOS       shift and go to state 39


state 15

    (9) label -> empty .
    (18) instructionDI -> empty .
    (20) instructionI -> empty .
    (24) instructionDT -> empty .
    (26) instructionN -> empty .
    (16) instructionSTL -> empty .

  ! reduce/reduce conflict for FIN resolved using rule 9 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 9 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 9 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 9 (label -> empty .)
  ! reduce/reduce conflict for FIN resolved using rule 9 (label -> empty .)
    FIN             reduce using rule 9 (label -> empty .)

  ! FIN             [ reduce using rule 18 (instructionDI -> empty .) ]
  ! FIN             [ reduce using rule 20 (instructionI -> empty .) ]
  ! FIN             [ reduce using rule 24 (instructionDT -> empty .) ]
  ! FIN             [ reduce using rule 26 (instructionN -> empty .) ]
  ! FIN             [ reduce using rule 16 (instructionSTL -> empty .) ]


state 16

    (6) comment -> COMMENT . cuerpo
    (7) comment -> COMMENT . empty
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (44) empty -> .
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
    (25) instructionN -> . instructionNName LABEL PUNTOCOMA cuerpo
    (26) instructionN -> . empty
    (15) instructionSTL -> . STL PUNTOCOMA cuerpo
    (16) instructionSTL -> . empty
    (27) instructionDIName -> . STR
    (28) instructionDIName -> . LDR
    (29) instructionDIName -> . MOVR
    (30) instructionDIName -> . CMPR
    (31) instructionDIName -> . STRV
    (32) instructionDIName -> . LDRV
    (33) instructionIName -> . MOVI
    (34) instructionIName -> . CMPI
    (35) instructionDTName -> . ADD
    (36) instructionDTName -> . SUB
    (37) instructionDTName -> . MUL
    (38) instructionDTName -> . ADDVV
    (39) instructionDTName -> . MULVE
    (40) instructionDTName -> . DIVVE
    (41) instructionNName -> . JMP
    (42) instructionNName -> . JEQ
    (43) instructionNName -> . STL

    FIN             reduce using rule 44 (empty -> .)
    LABEL           shift and go to state 14
    COMMENT         shift and go to state 16
    STL             shift and go to state 21
    STR             shift and go to state 22
    LDR             shift and go to state 23
    MOVR            shift and go to state 24
    CMPR            shift and go to state 25
    STRV            shift and go to state 26
    LDRV            shift and go to state 27
    MOVI            shift and go to state 28
    CMPI            shift and go to state 29
    ADD             shift and go to state 30
    SUB             shift and go to state 31
    MUL             shift and go to state 32
    ADDVV           shift and go to state 33
    MULVE           shift and go to state 34
    DIVVE           shift and go to state 35
    JMP             shift and go to state 36
    JEQ             shift and go to state 37

    cuerpo                         shift and go to state 40
    empty                          shift and go to state 41
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    comment                        shift and go to state 8
    instructionDI                  shift and go to state 9
    instructionI                   shift and go to state 10
    instructionDT                  shift and go to state 11
    instructionN                   shift and go to state 12
    instructionSTL                 shift and go to state 13
    instructionDIName              shift and go to state 17
    instructionIName               shift and go to state 18
    instructionDTName              shift and go to state 19
    instructionNName               shift and go to state 20

state 17

    (17) instructionDI -> instructionDIName . REG COMA REG PUNTOCOMA cuerpo
    (21) REG -> . REGESCALAR
    (22) REG -> . REGVECTORIAL

    REGESCALAR      shift and go to state 43
    REGVECTORIAL    shift and go to state 44

    REG                            shift and go to state 42

state 18

    (19) instructionI -> instructionIName . REG COMA IMM PUNTOCOMA cuerpo
    (21) REG -> . REGESCALAR
    (22) REG -> . REGVECTORIAL

    REGESCALAR      shift and go to state 43
    REGVECTORIAL    shift and go to state 44

    REG                            shift and go to state 45

state 19

    (23) instructionDT -> instructionDTName . REG COMA REG COMA REG PUNTOCOMA cuerpo
    (21) REG -> . REGESCALAR
    (22) REG -> . REGVECTORIAL

    REGESCALAR      shift and go to state 43
    REGVECTORIAL    shift and go to state 44

    REG                            shift and go to state 46

state 20

    (25) instructionN -> instructionNName . LABEL PUNTOCOMA cuerpo

    LABEL           shift and go to state 47


state 21

    (15) instructionSTL -> STL . PUNTOCOMA cuerpo
    (43) instructionNName -> STL .

    PUNTOCOMA       shift and go to state 48
    LABEL           reduce using rule 43 (instructionNName -> STL .)


state 22

    (27) instructionDIName -> STR .

    REGESCALAR      reduce using rule 27 (instructionDIName -> STR .)
    REGVECTORIAL    reduce using rule 27 (instructionDIName -> STR .)


state 23

    (28) instructionDIName -> LDR .

    REGESCALAR      reduce using rule 28 (instructionDIName -> LDR .)
    REGVECTORIAL    reduce using rule 28 (instructionDIName -> LDR .)


state 24

    (29) instructionDIName -> MOVR .

    REGESCALAR      reduce using rule 29 (instructionDIName -> MOVR .)
    REGVECTORIAL    reduce using rule 29 (instructionDIName -> MOVR .)


state 25

    (30) instructionDIName -> CMPR .

    REGESCALAR      reduce using rule 30 (instructionDIName -> CMPR .)
    REGVECTORIAL    reduce using rule 30 (instructionDIName -> CMPR .)


state 26

    (31) instructionDIName -> STRV .

    REGESCALAR      reduce using rule 31 (instructionDIName -> STRV .)
    REGVECTORIAL    reduce using rule 31 (instructionDIName -> STRV .)


state 27

    (32) instructionDIName -> LDRV .

    REGESCALAR      reduce using rule 32 (instructionDIName -> LDRV .)
    REGVECTORIAL    reduce using rule 32 (instructionDIName -> LDRV .)


state 28

    (33) instructionIName -> MOVI .

    REGESCALAR      reduce using rule 33 (instructionIName -> MOVI .)
    REGVECTORIAL    reduce using rule 33 (instructionIName -> MOVI .)


state 29

    (34) instructionIName -> CMPI .

    REGESCALAR      reduce using rule 34 (instructionIName -> CMPI .)
    REGVECTORIAL    reduce using rule 34 (instructionIName -> CMPI .)


state 30

    (35) instructionDTName -> ADD .

    REGESCALAR      reduce using rule 35 (instructionDTName -> ADD .)
    REGVECTORIAL    reduce using rule 35 (instructionDTName -> ADD .)


state 31

    (36) instructionDTName -> SUB .

    REGESCALAR      reduce using rule 36 (instructionDTName -> SUB .)
    REGVECTORIAL    reduce using rule 36 (instructionDTName -> SUB .)


state 32

    (37) instructionDTName -> MUL .

    REGESCALAR      reduce using rule 37 (instructionDTName -> MUL .)
    REGVECTORIAL    reduce using rule 37 (instructionDTName -> MUL .)


state 33

    (38) instructionDTName -> ADDVV .

    REGESCALAR      reduce using rule 38 (instructionDTName -> ADDVV .)
    REGVECTORIAL    reduce using rule 38 (instructionDTName -> ADDVV .)


state 34

    (39) instructionDTName -> MULVE .

    REGESCALAR      reduce using rule 39 (instructionDTName -> MULVE .)
    REGVECTORIAL    reduce using rule 39 (instructionDTName -> MULVE .)


state 35

    (40) instructionDTName -> DIVVE .

    REGESCALAR      reduce using rule 40 (instructionDTName -> DIVVE .)
    REGVECTORIAL    reduce using rule 40 (instructionDTName -> DIVVE .)


state 36

    (41) instructionNName -> JMP .

    LABEL           reduce using rule 41 (instructionNName -> JMP .)


state 37

    (42) instructionNName -> JEQ .

    LABEL           reduce using rule 42 (instructionNName -> JEQ .)


state 38

    (2) code -> INICIO DOSPUNTOS cuerpo FIN .

    $end            reduce using rule 2 (code -> INICIO DOSPUNTOS cuerpo FIN .)


state 39

    (8) label -> LABEL DOSPUNTOS . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
    (25) instructionN -> . instructionNName LABEL PUNTOCOMA cuerpo
    (26) instructionN -> . empty
    (15) instructionSTL -> . STL PUNTOCOMA cuerpo
    (16) instructionSTL -> . empty
    (44) empty -> .
    (27) instructionDIName -> . STR
    (28) instructionDIName -> . LDR
    (29) instructionDIName -> . MOVR
    (30) instructionDIName -> . CMPR
    (31) instructionDIName -> . STRV
    (32) instructionDIName -> . LDRV
    (33) instructionIName -> . MOVI
    (34) instructionIName -> . CMPI
    (35) instructionDTName -> . ADD
    (36) instructionDTName -> . SUB
    (37) instructionDTName -> . MUL
    (38) instructionDTName -> . ADDVV
    (39) instructionDTName -> . MULVE
    (40) instructionDTName -> . DIVVE
    (41) instructionNName -> . JMP
    (42) instructionNName -> . JEQ
    (43) instructionNName -> . STL

    LABEL           shift and go to state 14
    COMMENT         shift and go to state 16
    STL             shift and go to state 21
    FIN             reduce using rule 44 (empty -> .)
    STR             shift and go to state 22
    LDR             shift and go to state 23
    MOVR            shift and go to state 24
    CMPR            shift and go to state 25
    STRV            shift and go to state 26
    LDRV            shift and go to state 27
    MOVI            shift and go to state 28
    CMPI            shift and go to state 29
    ADD             shift and go to state 30
    SUB             shift and go to state 31
    MUL             shift and go to state 32
    ADDVV           shift and go to state 33
    MULVE           shift and go to state 34
    DIVVE           shift and go to state 35
    JMP             shift and go to state 36
    JEQ             shift and go to state 37

    cuerpo                         shift and go to state 49
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    comment                        shift and go to state 8
    instructionDI                  shift and go to state 9
    instructionI                   shift and go to state 10
    instructionDT                  shift and go to state 11
    instructionN                   shift and go to state 12
    instructionSTL                 shift and go to state 13
    empty                          shift and go to state 15
    instructionDIName              shift and go to state 17
    instructionIName               shift and go to state 18
    instructionDTName              shift and go to state 19
    instructionNName               shift and go to state 20

state 40

    (6) comment -> COMMENT cuerpo .

    FIN             reduce using rule 6 (comment -> COMMENT cuerpo .)


state 41

    (7) comment -> COMMENT empty .
    (9) label -> empty .
    (18) instructionDI -> empty .
    (20) instructionI -> empty .
    (24) instructionDT -> empty .
    (26) instructionN -> empty .
    (16) instructionSTL -> empty .

  ! reduce/reduce conflict for FIN resolved using rule 7 (comment -> COMMENT empty .)
  ! reduce/reduce conflict for FIN resolved using rule 7 (comment -> COMMENT empty .)
  ! reduce/reduce conflict for FIN resolved using rule 7 (comment -> COMMENT empty .)
  ! reduce/reduce conflict for FIN resolved using rule 7 (comment -> COMMENT empty .)
  ! reduce/reduce conflict for FIN resolved using rule 7 (comment -> COMMENT empty .)
  ! reduce/reduce conflict for FIN resolved using rule 7 (comment -> COMMENT empty .)
    FIN             reduce using rule 7 (comment -> COMMENT empty .)

  ! FIN             [ reduce using rule 9 (label -> empty .) ]
  ! FIN             [ reduce using rule 18 (instructionDI -> empty .) ]
  ! FIN             [ reduce using rule 20 (instructionI -> empty .) ]
  ! FIN             [ reduce using rule 24 (instructionDT -> empty .) ]
  ! FIN             [ reduce using rule 26 (instructionN -> empty .) ]
  ! FIN             [ reduce using rule 16 (instructionSTL -> empty .) ]


state 42

    (17) instructionDI -> instructionDIName REG . COMA REG PUNTOCOMA cuerpo

    COMA            shift and go to state 50


state 43

    (21) REG -> REGESCALAR .

    COMA            reduce using rule 21 (REG -> REGESCALAR .)
    PUNTOCOMA       reduce using rule 21 (REG -> REGESCALAR .)


state 44

    (22) REG -> REGVECTORIAL .

    COMA            reduce using rule 22 (REG -> REGVECTORIAL .)
    PUNTOCOMA       reduce using rule 22 (REG -> REGVECTORIAL .)


state 45

    (19) instructionI -> instructionIName REG . COMA IMM PUNTOCOMA cuerpo

    COMA            shift and go to state 51


state 46

    (23) instructionDT -> instructionDTName REG . COMA REG COMA REG PUNTOCOMA cuerpo

    COMA            shift and go to state 52


state 47

    (25) instructionN -> instructionNName LABEL . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 53


state 48

    (15) instructionSTL -> STL PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
    (25) instructionN -> . instructionNName LABEL PUNTOCOMA cuerpo
    (26) instructionN -> . empty
    (15) instructionSTL -> . STL PUNTOCOMA cuerpo
    (16) instructionSTL -> . empty
    (44) empty -> .
    (27) instructionDIName -> . STR
    (28) instructionDIName -> . LDR
    (29) instructionDIName -> . MOVR
    (30) instructionDIName -> . CMPR
    (31) instructionDIName -> . STRV
    (32) instructionDIName -> . LDRV
    (33) instructionIName -> . MOVI
    (34) instructionIName -> . CMPI
    (35) instructionDTName -> . ADD
    (36) instructionDTName -> . SUB
    (37) instructionDTName -> . MUL
    (38) instructionDTName -> . ADDVV
    (39) instructionDTName -> . MULVE
    (40) instructionDTName -> . DIVVE
    (41) instructionNName -> . JMP
    (42) instructionNName -> . JEQ
    (43) instructionNName -> . STL

    LABEL           shift and go to state 14
    COMMENT         shift and go to state 16
    STL             shift and go to state 21
    FIN             reduce using rule 44 (empty -> .)
    STR             shift and go to state 22
    LDR             shift and go to state 23
    MOVR            shift and go to state 24
    CMPR            shift and go to state 25
    STRV            shift and go to state 26
    LDRV            shift and go to state 27
    MOVI            shift and go to state 28
    CMPI            shift and go to state 29
    ADD             shift and go to state 30
    SUB             shift and go to state 31
    MUL             shift and go to state 32
    ADDVV           shift and go to state 33
    MULVE           shift and go to state 34
    DIVVE           shift and go to state 35
    JMP             shift and go to state 36
    JEQ             shift and go to state 37

    cuerpo                         shift and go to state 54
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    comment                        shift and go to state 8
    instructionDI                  shift and go to state 9
    instructionI                   shift and go to state 10
    instructionDT                  shift and go to state 11
    instructionN                   shift and go to state 12
    instructionSTL                 shift and go to state 13
    empty                          shift and go to state 15
    instructionDIName              shift and go to state 17
    instructionIName               shift and go to state 18
    instructionDTName              shift and go to state 19
    instructionNName               shift and go to state 20

state 49

    (8) label -> LABEL DOSPUNTOS cuerpo .

    FIN             reduce using rule 8 (label -> LABEL DOSPUNTOS cuerpo .)


state 50

    (17) instructionDI -> instructionDIName REG COMA . REG PUNTOCOMA cuerpo
    (21) REG -> . REGESCALAR
    (22) REG -> . REGVECTORIAL

    REGESCALAR      shift and go to state 43
    REGVECTORIAL    shift and go to state 44

    REG                            shift and go to state 55

state 51

    (19) instructionI -> instructionIName REG COMA . IMM PUNTOCOMA cuerpo

    IMM             shift and go to state 56


state 52

    (23) instructionDT -> instructionDTName REG COMA . REG COMA REG PUNTOCOMA cuerpo
    (21) REG -> . REGESCALAR
    (22) REG -> . REGVECTORIAL

    REGESCALAR      shift and go to state 43
    REGVECTORIAL    shift and go to state 44

    REG                            shift and go to state 57

state 53

    (25) instructionN -> instructionNName LABEL PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
    (25) instructionN -> . instructionNName LABEL PUNTOCOMA cuerpo
    (26) instructionN -> . empty
    (15) instructionSTL -> . STL PUNTOCOMA cuerpo
    (16) instructionSTL -> . empty
    (44) empty -> .
    (27) instructionDIName -> . STR
    (28) instructionDIName -> . LDR
    (29) instructionDIName -> . MOVR
    (30) instructionDIName -> . CMPR
    (31) instructionDIName -> . STRV
    (32) instructionDIName -> . LDRV
    (33) instructionIName -> . MOVI
    (34) instructionIName -> . CMPI
    (35) instructionDTName -> . ADD
    (36) instructionDTName -> . SUB
    (37) instructionDTName -> . MUL
    (38) instructionDTName -> . ADDVV
    (39) instructionDTName -> . MULVE
    (40) instructionDTName -> . DIVVE
    (41) instructionNName -> . JMP
    (42) instructionNName -> . JEQ
    (43) instructionNName -> . STL

    LABEL           shift and go to state 14
    COMMENT         shift and go to state 16
    STL             shift and go to state 21
    FIN             reduce using rule 44 (empty -> .)
    STR             shift and go to state 22
    LDR             shift and go to state 23
    MOVR            shift and go to state 24
    CMPR            shift and go to state 25
    STRV            shift and go to state 26
    LDRV            shift and go to state 27
    MOVI            shift and go to state 28
    CMPI            shift and go to state 29
    ADD             shift and go to state 30
    SUB             shift and go to state 31
    MUL             shift and go to state 32
    ADDVV           shift and go to state 33
    MULVE           shift and go to state 34
    DIVVE           shift and go to state 35
    JMP             shift and go to state 36
    JEQ             shift and go to state 37

    instructionNName               shift and go to state 20
    cuerpo                         shift and go to state 58
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    comment                        shift and go to state 8
    instructionDI                  shift and go to state 9
    instructionI                   shift and go to state 10
    instructionDT                  shift and go to state 11
    instructionN                   shift and go to state 12
    instructionSTL                 shift and go to state 13
    empty                          shift and go to state 15
    instructionDIName              shift and go to state 17
    instructionIName               shift and go to state 18
    instructionDTName              shift and go to state 19

state 54

    (15) instructionSTL -> STL PUNTOCOMA cuerpo .

    FIN             reduce using rule 15 (instructionSTL -> STL PUNTOCOMA cuerpo .)


state 55

    (17) instructionDI -> instructionDIName REG COMA REG . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 59


state 56

    (19) instructionI -> instructionIName REG COMA IMM . PUNTOCOMA cuerpo

    PUNTOCOMA       shift and go to state 60


state 57

    (23) instructionDT -> instructionDTName REG COMA REG . COMA REG PUNTOCOMA cuerpo

    COMA            shift and go to state 61


state 58

    (25) instructionN -> instructionNName LABEL PUNTOCOMA cuerpo .

    FIN             reduce using rule 25 (instructionN -> instructionNName LABEL PUNTOCOMA cuerpo .)


state 59

    (17) instructionDI -> instructionDIName REG COMA REG PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
    (25) instructionN -> . instructionNName LABEL PUNTOCOMA cuerpo
    (26) instructionN -> . empty
    (15) instructionSTL -> . STL PUNTOCOMA cuerpo
    (16) instructionSTL -> . empty
    (44) empty -> .
    (27) instructionDIName -> . STR
    (28) instructionDIName -> . LDR
    (29) instructionDIName -> . MOVR
    (30) instructionDIName -> . CMPR
    (31) instructionDIName -> . STRV
    (32) instructionDIName -> . LDRV
    (33) instructionIName -> . MOVI
    (34) instructionIName -> . CMPI
    (35) instructionDTName -> . ADD
    (36) instructionDTName -> . SUB
    (37) instructionDTName -> . MUL
    (38) instructionDTName -> . ADDVV
    (39) instructionDTName -> . MULVE
    (40) instructionDTName -> . DIVVE
    (41) instructionNName -> . JMP
    (42) instructionNName -> . JEQ
    (43) instructionNName -> . STL

    LABEL           shift and go to state 14
    COMMENT         shift and go to state 16
    STL             shift and go to state 21
    FIN             reduce using rule 44 (empty -> .)
    STR             shift and go to state 22
    LDR             shift and go to state 23
    MOVR            shift and go to state 24
    CMPR            shift and go to state 25
    STRV            shift and go to state 26
    LDRV            shift and go to state 27
    MOVI            shift and go to state 28
    CMPI            shift and go to state 29
    ADD             shift and go to state 30
    SUB             shift and go to state 31
    MUL             shift and go to state 32
    ADDVV           shift and go to state 33
    MULVE           shift and go to state 34
    DIVVE           shift and go to state 35
    JMP             shift and go to state 36
    JEQ             shift and go to state 37

    instructionDIName              shift and go to state 17
    cuerpo                         shift and go to state 62
    instruccion                    shift and go to state 6
    label                          shift and go to state 7
    comment                        shift and go to state 8
    instructionDI                  shift and go to state 9
    instructionI                   shift and go to state 10
    instructionDT                  shift and go to state 11
    instructionN                   shift and go to state 12
    instructionSTL                 shift and go to state 13
    empty                          shift and go to state 15
    instructionIName               shift and go to state 18
    instructionDTName              shift and go to state 19
    instructionNName               shift and go to state 20

state 60

    (19) instructionI -> instructionIName REG COMA IMM PUNTOCOMA . cuerpo
    (3) cuerpo -> . instruccion
    (4) cuerpo -> . label
    (5) cuerpo -> . comment
    (10) instruccion -> . instructionDI
    (11) instruccion -> . instructionI
    (12) instruccion -> . instructionDT
    (13) instruccion -> . instructionN
    (14) instruccion -> . instructionSTL
    (8) label -> . LABEL DOSPUNTOS cuerpo
    (9) label -> . empty
    (6) comment -> . COMMENT cuerpo
    (7) comment -> . COMMENT empty
    (17) instructionDI -> . instructionDIName REG COMA REG PUNTOCOMA cuerpo
    (18) instructionDI -> . empty
    (19) instructionI -> . instructionIName REG COMA IMM PUNTOCOMA cuerpo
    (20) instructionI -> . empty
    (23) instructionDT -> . instructionDTName REG COMA REG COMA REG PUNTOCOMA cuerpo
    (24) instructionDT -> . empty
